Fixes dragging so that movement downwards works correctly, adds collapsing and expanding functionality for input items

--- a/styles/_sidebar.scss
+++ b/styles/_sidebar.scss
@@ -2,6 +2,7 @@
   font-size: 1.4rem;
   width: 100%;
   &__pair {
+    @extend .chartsetup;
     align-items: center;
     display: flex;
     justify-content: space-between;
@@ -9,6 +10,7 @@
     width: 100%;
 
     &--label {
+      @extend .chartsetup;
       @media (max-width: $bp-small) {
         font-size: 4rem;
       }
@@ -64,19 +66,20 @@
 
 .data__dropzone {
   width: 100%;
-  height: 1rem;
+  height: 1.5rem;
 
   &--active {
-    border: solid green 3px;
-    margin-bottom: 1rem;
+    border: dotted green 0.3rem;
+    border-radius: 0.25rem;
+    height: 3rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 }
 
 .data__input--box {
   background-color: rgb(60, 60, 60);
-  /* border: 3px solid rgb(33, 31, 31); */
-
-  border-radius: 4%;
+  border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
   padding: 10px;
@@ -92,8 +95,6 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1rem;
-
   width: 100%;
 }
 
@@ -114,7 +115,7 @@
   width: 80%;
 
   &:hover {
-    cursor: pointer;
+    cursor: grab;
   }
 
   @media (max-width: $bp-small) {
@@ -155,7 +156,7 @@
   display: flex;
   font-size: 1.2rem;
   height: 2.5rem;
-  margin-right: 5px;
+  margin-right: 0.5rem;
 
   @media (max-width: $bp-small) {
     font-size: 4rem;
@@ -198,6 +199,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
+  margin-top: 1rem;
 
   @media (max-width: $bp-small) {
     margin-bottom: 1.5rem;
@@ -227,6 +229,10 @@
     width: 45rem;
     height: 4.5rem;
   }
+}
+
+.grabbed {
+  opacity: 0.5;
 }
 
 .swatch {
